# rag_assistant

./: .env  .gitignore  README.md  eval_run.py  eval_student_run.py  model_eval_report.html  pyproject.toml  rag_assistant.py  requirements.txt  student_agent.py
chroma_student_db/: chroma.sqlite3
data/: cv.txt  jd_ai_pm.txt
data/student_management/: advising_notes.csv  assessments.csv  attendance.csv  course_policy_links.csv  courses.csv  enrollments.csv  fees.csv  interventions.csv  policies.csv  policy_intervention_links.csv  policy_rules.csv  risk_policy_links.csv  student_course_context.csv  student_interventions.csv  student_risk_factors.csv  students.csv
docs/: CLI_GUIDE.md  CURSOR_CHAT_MCP_GUIDE.md  DATA_DESIGN.html  DESIGN.md  LMSTUDIO_CHAT_AGENT_GUIDE.md  MCP_MODES.md  REMOTE_MCP_SERVER_GUIDE.md  SQLITE_AGENTIC_RAG_PLAN.html
eval/: questions.json  student_questions.json
scripts/: __init__.py  build_student_db.py  build_student_kg.py  build_student_vectors.py  run_student_mcp_http_server.py  run_student_mcp_server.py  test_neo4j_connection.py
src/student_rag/: __init__.py  agent.py  artifacts.py  db.py  llm.py  lmstudio_agent.py  logging_config.py  mcp_server.py  paths.py  query_routing.py
test/: PURPOSE_REVIEW.md  RUNNING_TESTS.md  TESTCASES.md  eval_utils.py  hallucination_cases.json  llm_answer_cases.json  llm_plan_cases.json  purpose_schema.json  run_all_llm_eval.py  run_answer_eval.py  run_eval.py  run_hallucination_eval.py  run_model_eval.py  run_plan_eval.py  run_purpose_eval.py
test/chart/: cases.json
test/docs/: ARCHITECTURE.md  HALLUCINATION_CASES.md  MODEL_EVALUATION.md  SHARED_RUBRICS.md  chart.md  graph.md  integration.md  kg.md  planning.md  sql.md
test/fixtures/: attendance_chart_artifact.json  attendance_policy_graph.json  attendance_trend_sql.json  carlos_graph_context.json  high_risk_balances_sql.json  noah_graph_context.json  risk_summary_sql.json
test/graph/: cases.json
test/integration/: cases.json
test/kg/: cases.json
test/planning/: cases.json  run_eval.py
test/scripts/: build_fixtures.py
test/sql/: cases.json
test/suites/: __init__.py  evaluators.py  hallucination_history.py  history.py  registry.py  runner.py
(+25 files in other folders)
